Fixing spacing issues

--- a/frost-byte-forge/app/globals.css
+++ b/frost-byte-forge/app/globals.css
@@ -32,13 +32,7 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  appearance: 0;
-  border: 0;
   text-decoration: none;
-  box-sizing: border-box;
 }
 
 html {
@@ -46,7 +40,6 @@ html {
 }
 
 body {
-  width: 100vw;
   height: 100vh;
   font-family: "Poppins", sans-serif;
   font-size: 0.88rem;
@@ -58,6 +51,10 @@ body {
 
 a {
   color: var(--color-dark);
+}
+
+p {
+  margin: 0;
 }
 
 img {
@@ -113,18 +110,6 @@ b {
   color: var(--color-warning);
 }
 
-.container {
-  display: grid;
-  width: 96%;
-  margin: 0 auto;
-  gap: 1.8rem;
-  grid-template-columns: 12rem auto 23rem;
-}
-
-aside {
-  height: 100vh;
-}
-
 aside .toggle {
   display: none;
   align-items: center;
@@ -152,8 +137,7 @@ aside .sidebar {
   background-color: var(--color-white);
   box-shadow: var(--box-shadow);
   border-radius: 15px;
-  position: relative;
-  top: 1.5rem;
+  position: sticky;
   transition: all 0.3s ease;
 }
 
@@ -349,7 +333,7 @@ table tbody tr:last-child td {
 
 .nav {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 2rem;
 }
 
